CSS Property added  form data Modified

--- a/src/componants/Add_property/Addproperty.css
+++ b/src/componants/Add_property/Addproperty.css
@@ -1,11 +1,25 @@
-.form {
-    width: 1201px;
-    height: 656px;
-    flex-shrink: 0;
-    border-radius: 20px;
+/*Router is parent  of  form*/
+.router {
+    position: absolute;
+}
+
+/* outer_form class name given to form tag*/
+.outer_form {
+    position: relative;
+    left: 80px;
     background: #FFF;
     box-shadow: 10px 14px 70px 0px rgba(0, 0, 0, 0.03);
-    display: flex
+}
+
+.form {
+    width: 1201px;
+    /* height: 656px;*/
+    height: auto;
+    flex-shrink: 0;
+    border-radius: 20px;
+
+    display: flex;
+    margin-bottom: 25px;
 }
 
 /* Left side input margin*/
@@ -16,7 +30,7 @@
 
 /* Input tag */
 input {
-    width: 515px;
+    width: 520px;
     height: 60px;
     flex-shrink: 0;
     border-radius: 8px;
@@ -73,6 +87,12 @@ label {
     text-transform: uppercase;
 }
 
+/*button div wrapper*/
+.btn {
+    text-align-last: center;
+    margin-left: 370px;
+}
+
 /* Right side button*/
 .btn2 {
     width: 187px;
@@ -103,6 +123,7 @@ label {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    margin-right: 40px;
 }
 
 /*Overriding input property for image input*/
@@ -138,3 +159,18 @@ label {
     font-weight: 600;
     line-height: normal;
 }
+.loader {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+    margin: 0 auto;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
