--- a/src/componants/Add_property/Addproperty.css
+++ b/src/componants/Add_property/Addproperty.css
@@ -159,18 +159,24 @@ label {
     font-weight: 600;
     line-height: normal;
 }
+
 .loader {
     border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top: 4px solid #3498db; /* Blue */
+    border-top: 4px solid #3498db;
+    /* Blue */
     border-radius: 50%;
     width: 30px;
     height: 30px;
     animation: spin 1s linear infinite;
     margin: 0 auto;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
