--- a/src/componants/Add_property/Addproperty.css
+++ b/src/componants/Add_property/Addproperty.css
@@ -1,18 +1,21 @@
 /*Router is parent  of  form*/
 .router {
     position: absolute;
+
 }
 
 /* outer_form class name given to form tag*/
 .outer_form {
+    width: 1050px;
+    border-radius: 30px;
     position: relative;
-    left: 80px;
+    left: 10px;
     background: #FFF;
     box-shadow: 10px 14px 70px 0px rgba(0, 0, 0, 0.03);
 }
 
 .form {
-    width: 1201px;
+    width: 1000px;
     /* height: 656px;*/
     height: auto;
     flex-shrink: 0;
@@ -30,7 +33,7 @@
 
 /* Input tag */
 input {
-    width: 520px;
+    width: 450px;
     height: 60px;
     flex-shrink: 0;
     border-radius: 8px;
@@ -40,7 +43,7 @@ input {
 
 /* Select Tag */
 select {
-    width: 520px;
+    width: 450px;
     height: 60px;
     flex-shrink: 0;
     border-radius: 8px;
@@ -85,6 +88,8 @@ label {
     font-weight: 600;
     line-height: normal;
     text-transform: uppercase;
+    left: 30px;
+    position: relative;
 }
 
 /*button div wrapper*/
@@ -139,7 +144,8 @@ label {
 
 /* all four page indicator*/
 .page_indicator {
-    width: 1115px;
+    align-items: center;
+    width: 900px;
     height: 70px;
     flex-shrink: 0;
     border-radius: 500px;
@@ -179,4 +185,36 @@ label {
     100% {
         transform: rotate(360deg);
     }
+}
+
+.Sidebar {
+
+    z-index: -1;
+}
+
+.second_wrapper {
+    left: 230px;
+    position: relative;
+    z-index: 3;
+    top: -600px;
+}
+
+.blue {
+    width: 187px;
+    height: 60px;
+    flex-shrink: 0;
+    border-radius: 500px;
+    background: #4C57B6;
+    box-shadow: 0px 13px 25px 0px rgba(0, 0, 0, 0.15);
+    color: #FFF;
+    font-family: Source Sans Pro;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+    /* border-top: none; */
+    /* top: 15px; */
+    position: relative;
+    padding-top: 15px;
 }
