--- a/src/componants/Add_property/Addproperty.css
+++ b/src/componants/Add_property/Addproperty.css
@@ -166,16 +166,29 @@ label {
     line-height: normal;
 }
 
+/* This is the loader function shows form is 
+transmitting data to backend and waiting for response*/
+
 .loader {
-    border: 4px solid rgba(0, 0, 0, 0.1);
+    border: 4px solid rgba(207, 219, 219, 0.897);
     border-top: 4px solid #3498db;
-    /* Blue */
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 1s linear infinite;
-    margin: 0 auto;
+    /*Making loader circular*/
+    width: 60px;
+    height: 60px;
+    animation-name: spin;
+    animation-timing-function: linear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+
 }
+
+.Loader_Body {
+    margin-left: 45vw;
+    margin-top: 20vw;
+}
+
+/* Animation user to rotate loader*/
 
 @keyframes spin {
     0% {
@@ -187,6 +200,7 @@ label {
     }
 }
 
+/*Setting index for sidebar*/
 .Sidebar {
 
     z-index: -1;
@@ -217,4 +231,29 @@ label {
     /* top: 15px; */
     position: relative;
     padding-top: 15px;
+}
+
+
+/* icon in general info page styling*/
+
+/* ... (other styles) */
+
+#bottom_icon {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 50%;
+    background: #6AB4F8;
+}
+
+#top_icon {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
